[ui] fix button text getting wrapped

--- a/packages/shelter-ui/src/button.tsx.scss
+++ b/packages/shelter-ui/src/button.tsx.scss
@@ -12,6 +12,7 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
+  white-space: nowrap;
   cursor: pointer;
   transition: background-color .17s ease, color .17s ease;
   user-select: none;
